force-app/main/default/objects/Enrollment_Session__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Class__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Class</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Enrollment Sessions</relationshipLabel>
    <relationshipName>Enrollment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>