force-app/main/default/objects/Enrollment_Session__c/fields/Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Session</label>
    <referenceTo>Class_Session__c</referenceTo>
    <relationshipLabel>Enrollment Sessions</relationshipLabel>
    <relationshipName>Enrollment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>